--- a/packer/Jenkinsfile
+++ b/packer/Jenkinsfile
@@ -17,21 +17,16 @@ spec:
 
 def kaizen = env.BUILD_NUMBER
 
-properties([
-  parameters([
-    choice(choices: ['us-east-1', 'us-east-2', 'us-west-1', 'us-west-2'], description: 'Pick the region', name: 'region')
-    ])
-    ])
 
-if (params.region == "us-east-1") {
+if (env.BRANCH_NAME == "dev") {
   hello = "us-east-1"
 }
 
-else if (params.region == "us-east-2") {
+else if (env.BRANCH_NAME == "qa") {
   hello = "us-east-2"
 }
 
-else if (params.region == "us-west-1") {
+else if (env.BRANCH_NAME == "main") {
   hello = "us-west-1"
 }
 
